generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_satisfies_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
value25 satisfies string

AST:
(program
  (expression_statement
    (satisfies_expression
      (identifier value25)
      (predefined_type)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
