generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_sequence_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
a3, b3

AST:
(program
  (expression_statement
    (sequence_expression
      (identifier a3)
      (identifier b3)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
