generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_string.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
"test"

AST:
(program
  (expression_statement
    (string
      (string_fragment)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
