generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_subscript_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
arr3[i2]

AST:
(program
  (expression_statement
    (subscript_expression
      (identifier arr3)
      (identifier i2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
