generated-tests/tests/snapshots/ts/generated_tests__typescript__test_generated_with_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
with (obj4) { prop5; }

AST:
(program
  (with_statement
    (parenthesized_expression
      (identifier obj4)
    )
    (statement_block
      (expression_statement
        (identifier prop5)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
